[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/New/food.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Pigeon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/tamagotchi-07.png" type="Texture" id=4]
[ext_resource path="res://Assets/New/bread.png" type="Texture" id=5]
[ext_resource path="res://Assets/poo-05.png" type="Texture" id=6]
[ext_resource path="res://Assets/poop 1-05.png" type="Texture" id=7]
[ext_resource path="res://Assets/poop 2-05.png" type="Texture" id=8]
[ext_resource path="res://Assets/poop 3-05.png" type="Texture" id=9]
[ext_resource path="res://Assets/poop 4-05.png" type="Texture" id=10]
[ext_resource path="res://Assets/New/NEW BG.png" type="Texture" id=11]
[ext_resource path="res://SFX/bread-sound.ogg" type="AudioStream" id=12]
[ext_resource path="res://SFX/General Sound.wav" type="AudioStream" id=13]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.294118, 0.45098, 0.223529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="."]
position = Vector2( 360, 2100 )
texture = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_right = 721.0
margin_bottom = 4207.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartFood" type="Position2D" parent="."]
position = Vector2( 430, 1186 )

[node name="StartPoop" type="Position2D" parent="."]
position = Vector2( 360, 830 )

[node name="PigeonLoc" type="Position2D" parent="."]
position = Vector2( 360, 730 )

[node name="Poops" type="Node" parent="."]

[node name="Pigeon" parent="." instance=ExtResource( 3 )]
position = Vector2( 360, 730 )

[node name="EndFood" type="Position2D" parent="Pigeon"]
position = Vector2( 70, -53 )

[node name="LeftSpawn" type="Position2D" parent="."]
position = Vector2( -252, 731 )

[node name="RightSpawn" type="Position2D" parent="."]
position = Vector2( 977, 731 )

[node name="EndPoop" type="Position2D" parent="."]
position = Vector2( 360, 1450 )

[node name="Food" type="Sprite" parent="."]
visible = false
position = Vector2( 430, 1150 )
z_index = 1
texture = ExtResource( 1 )

[node name="Poop" type="Sprite" parent="."]
visible = false
position = Vector2( 367, 851 )
texture = ExtResource( 6 )

[node name="Tamagotchi-07" type="Sprite" parent="."]
visible = false
position = Vector2( 360, 747 )
scale = Vector2( 1, 0.65 )
texture = ExtResource( 4 )

[node name="Feed" type="TextureButton" parent="."]
margin_left = 257.0
margin_top = 1083.0
margin_right = 657.0
margin_bottom = 1483.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stain0" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 187, 180 )
texture = ExtResource( 7 )

[node name="Stain1" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 607, 1044 )
texture = ExtResource( 7 )

[node name="Stain2" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 454, 413 )
texture = ExtResource( 7 )

[node name="Stain3" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 99, 1190 )
texture = ExtResource( 8 )

[node name="Stain4" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 635, 137 )
texture = ExtResource( 8 )

[node name="Stain5" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 244, 521 )
texture = ExtResource( 8 )

[node name="Stain6" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 582, 545 )
texture = ExtResource( 9 )

[node name="Stain7" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 306, 893 )
texture = ExtResource( 9 )

[node name="Stain8" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 55, 713 )
texture = ExtResource( 9 )

[node name="Stain9" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 95, 424 )
texture = ExtResource( 10 )

[node name="Stain10" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 400, 199 )
texture = ExtResource( 10 )

[node name="Stain11" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 616, 885 )
texture = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 364, 636 )
current = true
limit_left = 0
limit_top = 0
limit_right = 720
limit_bottom = 1200

[node name="Bodies" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 360, 2100 )
stream = ExtResource( 13 )
volume_db = 10.0
autoplay = true

[node name="BreadSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 360, 2100 )
stream = ExtResource( 12 )
volume_db = -2.0

[connection signal="pressed" from="Feed" to="." method="_on_Feed_pressed"]
